--- a/CDVGeoCoder.xctemplate/___FILEBASENAME___ViewController.xib
+++ b/CDVGeoCoder.xctemplate/___FILEBASENAME___ViewController.xib
@@ -144,7 +144,6 @@
 						<string key="NSFrame">{{0, 256}, {480, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -334,6 +333,14 @@
 						<reference key="destination" ref="19457839"/>
 					</object>
 					<int key="connectionID">45</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">searchBar</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="916687801"/>
+					</object>
+					<int key="connectionID">49</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -590,7 +597,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">48</int>
+			<int key="maxID">49</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -642,6 +649,7 @@
 							<string>mapView</string>
 							<string>refreshBtn</string>
 							<string>safariBtn</string>
+							<string>searchBar</string>
 							<string>spinner</string>
 							<string>webView</string>
 						</object>
@@ -655,6 +663,7 @@
 							<string>MKMapView</string>
 							<string>UIBarButtonItem</string>
 							<string>UIBarButtonItem</string>
+							<string>UISearchBar</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIWebView</string>
 						</object>
@@ -671,6 +680,7 @@
 							<string>mapView</string>
 							<string>refreshBtn</string>
 							<string>safariBtn</string>
+							<string>searchBar</string>
 							<string>spinner</string>
 							<string>webView</string>
 						</object>
@@ -707,6 +717,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">safariBtn</string>
 								<string key="candidateClassName">UIBarButtonItem</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">searchBar</string>
+								<string key="candidateClassName">UISearchBar</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">spinner</string>
